--- a/index.html
+++ b/index.html
@@ -39,11 +39,21 @@
               'float': 'float 6s ease-in-out infinite',
               'float-delayed': 'float 6s ease-in-out 3s infinite',
               'spin-slow': 'spin 12s linear infinite',
+              'ken-burns': 'kenBurns 20s ease infinite alternate',
+              'fade-slide': 'fadeSlide 0.8s cubic-bezier(0.16, 1, 0.3, 1)',
             },
             keyframes: {
               float: {
                 '0%, 100%': { transform: 'translateY(0)' },
                 '50%': { transform: 'translateY(-20px)' },
+              },
+              kenBurns: {
+                '0%': { transform: 'scale(1) translate(0, 0)' },
+                '100%': { transform: 'scale(1.1) translate(-2%, -2%)' },
+              },
+              fadeSlide: {
+                '0%': { opacity: '0', transform: 'translateY(20px)' },
+                '100%': { opacity: '1', transform: 'translateY(0)' },
               }
             }
           },
